tests/negative/neg_pr118e2_same_field.safe
-- Test: neg_pr118e2_same_field
-- Description: The same record field cannot satisfy a `mut` actual and another actual in one call.
-- Expected: REJECT mut_alias_conflict

package neg_pr118e2_same_field

   subtype count is integer (0 to 20)

   type node is record
      value : count
      next  : node

   type pair is record
      left  : node
      right : node

   function touch (left : mut node; right : node)
      return

   function run
      owner : pair = (left = (value = 1, next = null), right = (value = 2, next = null))

      touch (owner.left, owner.left)  -- ERROR: overlapping field path
